# excel-files-etl

./: README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/pipelines/: extract.py  load.py  transform.py
data/output/: final_file.xlsx
tests/: test_pipeline.py
