[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["tiagosam"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
